--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,18 @@
+#hibernate settings
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
 
-# connect to database
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+#General?
+server.error.include-message=always
+
+#Temp database info
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
 
-# configure database
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#H2 Settings
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-consolebernate.dialect=org.hibernate.dialect.H2Dialect
