--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,4 @@ spring.datasource.password=
 
 #H2 Settings
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2-consolebernate.dialect=org.hibernate.dialect.H2Dialect
+spring.h2.console.path=/h2-console
